# msg-pic-extract

./: Cargo.toml  README.md
src/: app.rs  extractor.rs  lib.rs  licence.rs  main.rs  nwm_app.rs
