[package]
name = "msg-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
hex = "0.4.3"
msg_parser = "0.1.1"
open = "5.0.1"
rand = "0.8.5"

#
[target.'cfg(unix)'.dependencies]
egui = "0.25.0"

eframe = { version = "0.25.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"
env_logger = "0.10"

[target.'cfg(windows)'.dependencies]
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3" # Optional. Only if the derive macro is used.




